--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,6 +51,7 @@ android {
 repositories {
     google()
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -62,5 +63,5 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation "androidx.core:core-ktx:$androidxCoreVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation ("dev.bmcreations:scrcast:0.3.0")
+    implementation 'com.github.bmcreations:scrcast:trunk-SNAPSHOT'
 }
