--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,7 +51,6 @@ android {
 repositories {
     google()
     mavenCentral()
-    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -63,5 +62,5 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation "androidx.core:core-ktx:$androidxCoreVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'com.github.wainwrightmark:scrcast:other-SNAPSHOT'
+    api project(':scrcast:library')
 }
